# ytsubtran

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  YouTube_Downloader_Instrukcja_Windows.html  inserts.py  organize.py  pyproject.toml  requirements.txt  resolve_markers.py  youtube_downloader.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: HOW_IT_WORKS.md
tests/: test_youtube_downloader.py
